# Course_project_BDML_in_industry_2025

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt  verify_chroma.py
None/: chroma.sqlite3
config/filebeat/: config.py
data/books/: Lectures_Part1.txt  Lectures_Part2.txt  Lexicology_Lectures.txt  Specific_English.txt
scripts/: check_yandex.py  ingest_textbook.py  remove_comments.py  seed_chroma.py  seed_data.py  test_assessor.py  test_chroma.py  test_curriculum_planner.py  test_planner.py  test_research_agent.py  test_tutor.py  test_unified_agent.py
src/: validators.py
src/agents/: assessor_agent.py  base_agent.py  curriculum_planner.py  curriculum_planner_agent.py  language_tools.py  language_tutor_agent.py  research_agent.py  theory_agent.py  unified_teacher_agent.py
src/api/: main.py
src/backend/: main.py
src/database/: chroma_db.py  mongodb_adapter.p  mongodb_adapter.py
src/models/: schemas.py
src/ui/: app.py
src/utils/: extract_text.py  llm.py  yandex_disk.py
